warehouse-chicago-topo-bb-fail.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-chicago
  namespace: orders
  labels:
    color: warehouse-chicago
    app: fulfillment
spec:
  replicas: 3
  selector:
    matchLabels:
      color: warehouse-chicago
      app: fulfillment
  template:
    metadata:
      labels:
        color: warehouse-chicago
        app: fulfillment
    spec:
      containers:
      - name: bb
        image: docker.io/buoyantio/bb:v0.0.7
        ports:
        - containerPort: 8080
        args: ["terminus", "--h1-server-port", "8080", "--sleep-in-millis", "200", "--percent-failure", "100", "--response-text", "success"]
        resources:
          requests:
            cpu: 10m # Overprovision
            memory: 10Mi
          limits:
            cpu: 1000m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [zone-central]
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: fulfillment
