kubecost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
  name: hazl-orders-playground-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubecost-cost-analyzer.kubecost
            port:
              number: 9090
        path: /kubecost
        pathType: Prefix
      - backend:
          service:
            name: grafana.grafana
            port:
              number: 3000
        path: /grafana
        pathType: Prefix
